bdr.BDR.scala.error
Compilation error:
BDR:3: error: identifier expected but 'if' found.
  if(c=="R"){
  ^