bdr.BDR.scala.code
while (isOverMessage()){
  c=readMessage():
  if(c=="R"){
    right();
    forward()
  }else if(c=="L"){
    left();
    forward();
  }else if(c=="I"){
    left();
    left();
    forward();
  }else if(c=="A"){
    forward();
  }else if(c=="B"){
    forward();
    forward();
  }else if(c=="C"){
    forward();
    forward();
    forward();
  }else if(c=="Z"){
    backward();
  }else if(c=="Y"){
    backward();
    backward();
  }else if(c=="X"){
    backward();
    backward();
    backward();
  }
}